--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 		    <artifactId>jackson-annotations</artifactId>
 		    <version>${version.jackson}</version>
 		</dependency>
+		<dependency> 
+		    <groupId>com.fasterxml.jackson.core</groupId> 
+		    <artifactId>jackson-databind</artifactId>   
+		    <version>${version.jackson}</version> 
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
