--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 		    <artifactId>jackson-databind</artifactId>   
 		    <version>${version.jackson}</version> 
 		</dependency>
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
