--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ api.url.organizations.all=me/organizations
 api.url.organizations.one=organizations/
 api.url.funding.source.all=organizations/{organization-id}/fundingsources
 api.url.funding.source.one=fundingsources/
-api.url.adaccount.all=organizations/{organization-id}/adaccounts
-api.url.adaccount.one=adaccounts/
-api.url.adaccount.update=organizations/{organization-id}/adaccounts
+api.url.campaigns.all=adaccounts/{ad_account_id}/campaigns
+api.url.campaigns.one=campaigns/
+api.url.campaigns.create=adaccounts/{ad_account_id}/campaigns
+api.url.campaigns.update=adaccounts/{ad_account_id}/campaigns
+api.url.campaigns.delete=campaigns/
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
