Implementation and Unit tests for AdSquads

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,10 @@ api.url.campaigns.one=campaigns/
 api.url.campaigns.create=adaccounts/{ad_account_id}/campaigns
 api.url.campaigns.update=adaccounts/{ad_account_id}/campaigns
 api.url.campaigns.delete=campaigns/
+api.url.adsquads.one=adsquads/
+api.url.adsquads.create=campaigns/{campaign_id}/adsquads
+api.url.adsquads.update=campaigns/{campaign_id}/adsquads
+api.url.adsquads.delete=adsquads/
+api.url.adsquads.all=campaigns/{campaign_id}/adsquads
+api.url.adsquads.all2=adaccounts/{ad_account_id}/adsquads
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
