--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,10 @@ api.url.adsquads.update=campaigns/{campaign_id}/adsquads
 api.url.adsquads.delete=adsquads/
 api.url.adsquads.all=campaigns/{campaign_id}/adsquads
 api.url.adsquads.all2=adaccounts/{ad_account_id}/adsquads
+api.url.ad.create=adsquads/{ad_squad_id}/ads
+api.url.ad.update=adsquads/{ad_squad_id}/ads
+api.url.ad.delete=ads/
+api.url.ad.one=ads/
+api.url.ad.all=adsquads/{ad_squad_id}/ads
+api.url.ad.all2=adsquads/{ad_account_id}/ads
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
