--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.12.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
