--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 				<groupId>org.eluder.coveralls</groupId>
 				<artifactId>coveralls-maven-plugin</artifactId>
 				<version>4.3.0</version>
+				<configuration>
+	              	<formats>
+	                	<format>xml</format>
+	              	</formats>
+              	</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
