--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,5 @@ api.url.ad.delete=ads/
 api.url.ad.one=ads/
 api.url.ad.all=adsquads/{ad_squad_id}/ads
 api.url.ad.all2=adsquads/{ad_account_id}/ads
+api.url.media.create=adaccounts/{ad_account_id}/media
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
