--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
 		    <artifactId>httpclient</artifactId>
 		    <version>4.5.10</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpmime</artifactId>
+		    <version>4.5.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
