--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+api.app.icon.min.width=200
+api.app.icon.min.height=200
+api.video.max.size=31800000
+api.top.image.min.size=5000000
+api.top.image.min.width=1080
+api.top.image.min.height=1920
 api.url=https://adsapi.snapchat.com/v1/
 api.url.user.me=me
 api.url.organizations.all=me/organizations
@@ -22,4 +28,5 @@ api.url.ad.one=ads/
 api.url.ad.all=adsquads/{ad_squad_id}/ads
 api.url.ad.all2=adsquads/{ad_account_id}/ads
 api.url.media.create=adaccounts/{ad_account_id}/media
+api.url.media.upload.video=media/{media_id}/upload
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
