--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,5 @@ api.url.ad.all2=adsquads/{ad_account_id}/ads
 api.url.media.create=adaccounts/{ad_account_id}/media
 api.url.media.upload.video=media/{media_id}/upload
 api.url.media.upload.image=media/{media_id}/upload
+api.url.media.upload.large.init=media/{media_id}/multipart-upload-v2?action=INIT
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
