--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,8 @@ api.url.media.create=adaccounts/{ad_account_id}/media
 api.url.media.upload.video=media/{media_id}/upload
 api.url.media.upload.image=media/{media_id}/upload
 api.url.media.upload.large.init=media/{media_id}/multipart-upload-v2?action=INIT
+api.url.media.all=adaccounts/{ad_account_id}/media
+api.url.media.one=media/
+api.url.media.preview=media/{media_id}/preview
+api.url.media.thumbnail=media/{media_id}/thumbnail
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
