Tests and Implementation creatives

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,9 @@ api.url.media.all=adaccounts/{ad_account_id}/media
 api.url.media.one=media/
 api.url.media.preview=media/{media_id}/preview
 api.url.media.thumbnail=media/{media_id}/thumbnail
+api.url.creative.create=s
+api.url.creative.update=s
+api.url.creative.one=creatives/
+api.url.creative.all=s
+api.url.creative.preview=creatives/{creative_id}/snapcode
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
