Interfaces creative-elements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ api.video.max.size=31800000
 api.top.image.min.size=5000000
 api.top.image.min.width=1080
 api.top.image.min.height=1920
+api.brandname.max.characters=25
+api.headline.max.characters=34
 api.url=https://adsapi.snapchat.com/v1/
 api.url.user.me=me
 api.url.organizations.all=me/organizations
