--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,7 @@ api.url.media.thumbnail=media/{media_id}/thumbnail
 api.url.creative.create=adaccounts/{ad_account_id}/creatives
 api.url.creative.update=adaccounts/{ad_account_id}/creatives
 api.url.creative.one=creatives/
-api.url.creative.all=s
+api.url.creative.all=adaccounts/{ad_account_id}/creatives
 api.url.creative.preview=creatives/{creative_id}/snapcode
+api.url.interaction.zone.create=adaccounts/{ad_account_id}/interaction_zones
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
