--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,5 +42,7 @@ api.url.creative.update=adaccounts/{ad_account_id}/creatives
 api.url.creative.one=creatives/
 api.url.creative.all=adaccounts/{ad_account_id}/creatives
 api.url.creative.preview=creatives/{creative_id}/snapcode
+api.url.creative.element.create=adaccounts/{ad_account_id}/creative_elements
+api.url.creative.element.create.multiple=adaccounts/{ad_account_id}/creative_elements
 api.url.interaction.zone.create=adaccounts/{ad_account_id}/interaction_zones
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
