--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,5 @@ api.url.creative.preview=creatives/{creative_id}/snapcode
 api.url.creative.element.create=adaccounts/{ad_account_id}/creative_elements
 api.url.creative.element.create.multiple=adaccounts/{ad_account_id}/creative_elements
 api.url.interaction.zone.create=adaccounts/{ad_account_id}/interaction_zones
+api.url.audience.match.create=adaccounts/{ad_account_id}/segments
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
