--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,4 +47,6 @@ api.url.creative.element.create.multiple=adaccounts/{ad_account_id}/creative_ele
 api.url.interaction.zone.create=adaccounts/{ad_account_id}/interaction_zones
 api.url.audience.match.create=adaccounts/{ad_account_id}/segments
 api.url.audience.match.all=adaccounts/{ad_account_id}/segments
+api.url.audience.match.one=segments/
+api.url.audience.match.update=adaccounts/{ad_account_id}/segments
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
