--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,17 @@
 
 	<name>api</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<developers>
-	    <developer>
-	      <name>Yassine AZIMANI</name>
-	      <id>yassine.azimani</id>
-	      <email>yassine.azimani@hotmail.fr</email>
-	      <roles>
-	        <role>Java Developer</role>
-	      </roles>
-    	</developer>
-    </developers>
+		<developer>
+			<name>Yassine AZIMANI</name>
+			<id>yassine.azimani</id>
+			<email>yassine.azimani@hotmail.fr</email>
+			<roles>
+				<role>Java Developer</role>
+			</roles>
+		</developer>
+	</developers>
 
 	<properties>
 		<commons.cobertura.version>2.7</commons.cobertura.version>
@@ -28,6 +28,9 @@
 		<version.assertj>3.11.0</version.assertj>
 		<version.lombok>1.18.2</version.lombok>
 		<version.jackson>2.10.1</version.jackson>
+		<version.log4J2>2.12.1</version.log4J2>
+		<version.httpclient>4.5.10</version.httpclient>
+		<version.codec>1.12</version.codec>
 		<version.apache.commons.collections>4.2</version.apache.commons.collections>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -85,36 +88,41 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.12.1</version>
+			<version>${version.log4J2}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.12.1</version>
+			<version>${version.log4J2}</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpclient</artifactId>
-		    <version>4.5.10</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${version.httpclient}</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpmime</artifactId>
-		    <version>4.5.10</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>${version.httpclient}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${version.codec}</version>
 		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
-	            <groupId>org.codehaus.mojo</groupId>
-	            <artifactId>cobertura-maven-plugin</artifactId>
-	            <version>${commons.cobertura.version}</version>
-	            <configuration>
-	              <formats>
-	                <format>xml</format>
-	              </formats>
-	            </configuration>
-          	</plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${commons.cobertura.version}</version>
+				<configuration>
+					<formats>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.eluder.coveralls</groupId>
 				<artifactId>coveralls-maven-plugin</artifactId>
