--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,4 +50,5 @@ api.url.audience.match.all=adaccounts/{ad_account_id}/segments
 api.url.audience.match.one=segments/
 api.url.audience.match.update=adaccounts/{ad_account_id}/segments
 api.url.audience.match.add.user=segments/{segment_id}/users
+api.url.audience.match.delete.user=segments/{segment_id}/users
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
