--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,4 +51,6 @@ api.url.audience.match.one=segments/
 api.url.audience.match.update=adaccounts/{ad_account_id}/segments
 api.url.audience.match.add.user=segments/{segment_id}/users
 api.url.audience.match.delete.user=segments/{segment_id}/users
+api.url.audience.match.delete.all=segments/{segment_id}/all_users
+api.url.audience.match.delete=segments/
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
