--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,4 +53,5 @@ api.url.audience.match.add.user=segments/{segment_id}/users
 api.url.audience.match.delete.user=segments/{segment_id}/users
 api.url.audience.match.delete.all=segments/{segment_id}/all_users
 api.url.audience.match.delete=segments/
+api.url.audience.match.create.sam.lookalikes=adaccounts/{ad_account_id}/segments
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
