Implementation and tests

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
 			<version>${version.jackson}</version>
 		</dependency>
 		<dependency>
+		   <groupId>com.fasterxml.jackson.datatype</groupId>
+		   <artifactId>jackson-datatype-jdk8</artifactId>
+		   <version>${version.jackson}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>${version.log4J2}</version>
