--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,4 +54,6 @@ api.url.audience.match.delete.user=segments/{segment_id}/users
 api.url.audience.match.delete.all=segments/{segment_id}/all_users
 api.url.audience.match.delete=segments/
 api.url.audience.match.create.sam.lookalikes=adaccounts/{ad_account_id}/segments
+api.url.audience.size.by.adaccount=adaccounts/{ID}/audience_size_v2
+api.url.audience.size.by.adsquad=adsquads/{ID}/audience_size_v2
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
