--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,4 +56,6 @@ api.url.audience.match.delete=segments/
 api.url.audience.match.create.sam.lookalikes=adaccounts/{ad_account_id}/segments
 api.url.audience.size.by.adaccount=adaccounts/{ID}/audience_size_v2
 api.url.audience.size.by.adsquad=adsquads/{ID}/audience_size_v2
+api.url.bid.estimate.by.adaccount=adaccounts/{ID}/bid_estimate
+api.url.bid.estimate.by.adsquad=adsquads/{ID}/bid_estimate
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
