Tests and implementation audit-logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,4 +58,8 @@ api.url.audience.size.by.adaccount=adaccounts/{ID}/audience_size_v2
 api.url.audience.size.by.adsquad=adsquads/{ID}/audience_size_v2
 api.url.bid.estimate.by.adaccount=adaccounts/{ID}/bid_estimate
 api.url.bid.estimate.by.adsquad=adsquads/{ID}/bid_estimate
+api.url.audit.logs.by.campaign=campaigns/{campaign_id}/external_changelogs
+api.url.audit.logs.by.ad=ads/{ad_id}/external_changelogs
+api.url.audit.logs.by.adsquad=adsquads/{adsquad_id}/external_changelogs
+api.url.audit.logs.by.creative=creatives/{creative_id}/external_changelogs
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
