--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,5 @@ api.url.stats.ad=ads/{ad_id}/stats
 api.url.stats.pixel.domains=pixels/{pixel_id}/domains/stats
 api.url.stats.pixel.specific.domain=pixels/{pixel_id}/stats
 api.url.auth=https://accounts.snapchat.com/login/oauth2/access_token
+api.url.pagination.limit.min=50
+api.url.pagination.limit.max=1000
