--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>snapads4j</groupId>
+	<groupId>org.snapads4j</groupId>
 	<artifactId>snapads4j</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
@@ -15,7 +15,6 @@
 		<developer>
 			<name>Yassine AZIMANI</name>
 			<id>yassine.azimani</id>
-			<email>yassine.azimani@hotmail.fr</email>
 			<roles>
 				<role>Java Developer</role>
 			</roles>
