--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,15 @@
 			<version>2.2.6</version>
 		</dependency>
 	</dependencies>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/yassineazimani/SnapAds4J</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
